--- a/panel-7xKq9.html
+++ b/panel-7xKq9.html
@@ -106,7 +106,7 @@
      TOKEN SECRETO (CAMADA 1)
      ========================= */
 
-  const REQUIRED_TOKEN = 'DoceDeLeite@123BarcelonaViscaElBarça*()';
+  const REQUIRED_TOKEN = 'DoceDeLeite123BarcelonaViscaElBarça';
 
   const urlToken =
     new URLSearchParams(window.location.search).get('token');
@@ -180,3 +180,4 @@
 
 </body>
 </html>
+
